# rust-roguelike

./: .gitignore  Cargo.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.swarm/: memory.db
src/: constants.rs  lib.rs  main.rs  states.rs
src/components/: actor.rs  combat.rs  mod.rs  viewshed.rs
src/plugins/: game_core.rs  mod.rs
src/resources/: action_points.rs  combat_log.rs  map.rs  mod.rs  visibility.rs
src/systems/: combat.rs  enemy_ai.rs  enemy_spawning.rs  fov.rs  mod.rs  movement.rs  turn_manager.rs
